--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,10 @@ input[type="text"] {
 }
 
 .modal-body {
-  display: none;  
   max-height: 70vh;   
   overflow-y: auto; 
-  white-space: pre-wrap; }
+  white-space: pre-wrap;
+}
 
 #favorites {
   min-height: 60vh;
